--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ body {
   max-height: 66.6vw;
   margin: auto;
   background-color: #0002;
-  background-image: url('./img/vid-img.png');
+  background-image: url('./img/start-ss.png');
   /* background-position: (0, 0); */
   background-position: center;
   background-size: 120%;
